Added travelPackagesBox() and createCell()